--- a/app/src/main/res/layout/delivery_main_list.xml
+++ b/app/src/main/res/layout/delivery_main_list.xml
@@ -28,7 +28,7 @@
             android:backgroundTint="@color/colorPrimary"
             android:elevation="50dp"
             android:src="@drawable/ic_add_box_black"
-            android:tint="#fff"
+            app:tint="#fff"
             app:borderWidth="0dp"
             app:fabSize="normal" />
     </LinearLayout>
