--- a/app/src/main/res/layout/delivery_item.xml
+++ b/app/src/main/res/layout/delivery_item.xml
@@ -151,7 +151,10 @@
             </LinearLayout>
 
         </LinearLayout>
-
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="none">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -163,7 +166,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:layout_weight="1"
                 android:text="Active"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 app:strokeColor="@color/colorPrimary" />
@@ -174,9 +176,26 @@
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:layout_weight="1"
                 android:text="In Active"
                 app:strokeColor="@color/colorPrimary" />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/edit"
+                android:layout_width="match_parent"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="Edit"
+                app:strokeColor="@color/colorPrimary" />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/delete"
+                android:layout_width="match_parent"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="Delete"
+                app:strokeColor="@color/colorPrimary" />
+
         </LinearLayout>
+        </HorizontalScrollView>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
