--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="soft_grey">#ffeceeef</color>
     <color name="viewBg">#f1f5f8</color>
     <color name="view_line">#d4d9d5</color>
+    <color name="red">#D50000</color>
 
     <color name="contact_name">#333333</color>
     <color name="contact_number">#8c8c8c</color>
